--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/bplogo.png
+/connpass_logo_1.png
+/original.jpg
+/picture_large978-4-8144-0046-1.jpeg
+/pyq_logo_color.png
+/tracery.png
